--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
                   type="tel"
                   id="phone"
                   name="phone"
-                  maxlength="15"
                   pattern="\+(\d{1,4}|\(\d{1,4}\))(\d{1,4}|\(\d{1,4}\))?[\d\s\.-]{5,}"
                   placeholder=" "
                   required
@@ -111,7 +110,10 @@
             <div>
               <button>Create Account</button>
             </div>
-            <span>Already have an account? <a href="">Log In</a></span>
+            <span
+              >Already have an account?
+              <a href="" class="fromLeft">Log In</a></span
+            >
           </div>
         </div>
       </section>
